<resources>
    <string name="app_name">AndroidMobile0909</string>
    <string name="Texto_Nome">Digite o seu nome</string>
    <string name="Enviar_Nome">Confirmar</string>
    <string name="Onde_Estou">Onde eu estou</string>
    <string name="Latitude">Latitude</string>
    <string name="Longetude">Longetude</string>
    <string name="Prosseguir">Clique para Prosseguir</string>
    <string name="TirarFoto">Clique aqui para tirar uma foto</string>
    <string name="SelecionarImagem">Clique aqui para selecionar uma Imagem</string>
    <string name="Next">Ir para próxima tela</string>
    <string name="Creditos">Créditos</string>
    <string name="Douglas">Douglas dos Santos Melo</string>
    <string name="Danilo">Danilo Mancini Queroz de Sousa</string>
    <string name="Nome">Seu Nome</string>
    <string name="Proposta">Teste aqui as funcionalidades do seu Celular</string>
</resources>